--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="card mb-4" style="width: 100%;">
                 <div class="row g-0">
                     <div class="col-lg-12 col-md-4">
-                        <img src="/img/image1.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="img/image1.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-lg-12 col-md-8">
                         <div class="card-body">
@@ -118,7 +118,7 @@
             <div class="card mb-4" style="width: 100%;">
                 <div class="row g-0">
                     <div class="col-lg-12 col-md-4">
-                        <img src="/img/image2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="img/image2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-lg-12 col-md-8">
                         <div class="card-body">
@@ -134,7 +134,7 @@
             <div class="card mb-4" style="width: 100%;">
                 <div class="row g-0">
                     <div class="col-lg-12 col-md-4">
-                        <img src="/img/image3.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="img/image3.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-lg-12 col-md-8">
                         <div class="card-body">
@@ -190,7 +190,7 @@
 <section class="footer text-center">
     <div class=" container ">
         <div class="headFooter mb-5">
-            <img class="mb-5" src="/img/1.png.webp " />
+            <img class="mb-5" src="img/1.png.webp " />
             <a href="#" class="d-block">med.2016.ben@enset.ma</a>
         </div>
         <div class="sectContact">
